data/derived/sp14/progs/unify/prog0900.ml.out
Characters 58-59:
  let fixpoint (f,b) = wwhile ((if f b = b then b else f b),b);;
                                                            ^
Error: This expression has type 'a -> 'a * bool
       but an expression was expected of type 'a
       The type variable 'a occurs inside 'a -> 'a * bool
